Fix bug 31/07/2020 1. Xem xếp hạng tuần - Button hủy chuyển sang màu đỏ - Các trang xếp hạng chuyển button Tải xuống sang bên trái - Khi lỗi hiện message err trong popup
2. Danh sách lỗi theo ngày
- Thêm tổng điểm cuối trang, lề trái
- Thêm scrollable cho tất cả popup

3. viewRequest
- Chỉnh màu chữ cho trạng thái

4. Quản lý bài đăng
- Thêm lazy load vào ảnh
- Default chờ duyệt

5. postDetail
- Chỉnh lại message dialog confirm
- Thêm gạch kẻ trước button action
- Bỏ author

6. CreatePost
- Khi không thêm ảnh bìa, không hiện message lỗi

7. Phân công trực tuần
- Bỏ phân trang
- Bỏ sort or condition search -> sort header
- Thêm cột cờ đỏ 2

--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -1698,7 +1698,7 @@ a.slide_btn {
 }
 
 /*Post Detail*/
-.post-subtitle-title h5 {
+.post-date {
     color: #757575;
     font-family: "Open Sans", sans-serif;
     font-weight: 400;
@@ -1720,6 +1720,12 @@ a.slide_btn {
 
 .post-content-text {
     overflow: auto;
+}
+
+.post-action {
+    margin-top: 20px;
+    padding-top: 20px;
+    border-top: 1px solid #aaaaaa;
 }
 
 /*Button upload image*/
