--- a/project/src/main/resources/templates/manageAccount/changePassword.html
+++ b/project/src/main/resources/templates/manageAccount/changePassword.html
@@ -53,7 +53,7 @@
 
 <!--    Modal Change Password Success-->
 <div class="modal fade" tabindex="-1" role="dialog" id="changePassword">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
         <div class="modal-content">
             <div class="modal-body text-center">
                 <img class="mb-3 mt-3" src="img/img-success.png"/>
