--- a/project/src/main/resources/templates/manageAccount/manageAccount.html
+++ b/project/src/main/resources/templates/manageAccount/manageAccount.html
@@ -97,7 +97,7 @@
 
 <!-- Delete Modal HTML -->
 <div id="deleteAccountModal" class="modal fade">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-body text-center"></div>
             <div class="modal-footer">
@@ -111,7 +111,7 @@
 
 <!--    Modal Delete Success-->
 <div class="modal fade" tabindex="-1" role="dialog" id="deleteSuccess">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
         <div class="modal-content">
             <div class="modal-body text-center"></div>
             <div class="modal-footer">
@@ -123,7 +123,7 @@
 
 <!-- Reset Password Modal HTML -->
 <div id="resetPasswordModal" class="modal fade">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">Đặt lại mật khẩu</h4>
@@ -141,7 +141,7 @@
 
 <!--    Modal Reset Password Success-->
 <div class="modal fade" tabindex="-1" role="dialog" id="resetSuccess">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
         <div class="modal-content">
             <div class="modal-body text-center"></div>
             <div class="modal-footer">
