--- a/project/src/main/resources/templates/manageAccount/userInformation.html
+++ b/project/src/main/resources/templates/manageAccount/userInformation.html
@@ -101,7 +101,7 @@
 
 <!--    Modal Edit Information Success-->
 <div class="modal" tabindex="-1" role="dialog" id="editInfoSuccess">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
         <div class="modal-content">
             <div class="modal-body text-center">
             </div>
