--- a/project/src/main/resources/templates/manageClass/editClass.html
+++ b/project/src/main/resources/templates/manageClass/editClass.html
@@ -64,7 +64,7 @@
 
 <!-- Confirm edit Modal HTML -->
 <div id="confirmEditModal" class="modal fade" tabindex="-1" role="dialog">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-body text-center"></div>
             <div class="modal-footer">
@@ -77,7 +77,7 @@
 
 <!--    Modal Edit Information Success-->
 <div class="modal fade" tabindex="-1" role="dialog" id="editInfoSuccess">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
         <div class="modal-content">
             <div class="modal-body text-center">
                 <img class="mb-3 mt-3" src="img/img-success.png"/>
