--- a/project/src/main/resources/templates/managePost/createPost.html
+++ b/project/src/main/resources/templates/managePost/createPost.html
@@ -67,7 +67,7 @@
 
 <!--Modal Save-->
 <div class="modal fade" tabindex="-1" role="dialog" id="saveModal">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
         <div class="modal-content">
             <div class="modal-body text-center"></div>
             <div class="modal-footer">
