--- a/project/src/main/resources/templates/managePost/postDetail.html
+++ b/project/src/main/resources/templates/managePost/postDetail.html
@@ -31,8 +31,7 @@
     <div class="table-wrapper">
         <div class="table-title">
             <h2></h2>
-            <span class="post-subtitle-title"><h5 class="post-date d-inline mr-2"></h5> | <h5
-                    class="post-author d-inline ml-2"></h5></span>
+            <h5 class="post-date d-inline mr-2"></h5>
         </div>
         <div class="panel panel-default mt-5">
             <div class="post-content-text">
@@ -40,9 +39,9 @@
             <div class="post-action text-right">
                 <div class="newsletterId" hidden></div>
                 <div class="status" hidden></div>
-                <input type="button" class="btn btn-outline-danger btn-delete hide" value="ẨN BÀI">
+                <input type="button" class="btn btn-outline-danger btn-delete" value="ẨN BÀI">
                 <input type="button" class="btn btn-outline-primary btn-edit hide" value="CHỈNH SỬA">
-                <input type="button" class="btn btn-outline-danger btn-reject hide" value="ẨN BÀI">
+<!--                <input type="button" class="btn btn-outline-danger btn-delete hide" value="ẨN BÀI">-->
                 <input type="button" class="btn btn-outline-primary btn-accept hide" value="ĐĂNG BÀI">
             </div>
         </div>
@@ -51,7 +50,7 @@
 
 <!--    Modal confirm-->
 <div class="modal fade" tabindex="-1" role="dialog" id="confirmModal">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
         <div class="modal-content">
             <div class="modal-body text-center"></div>
             <div class="modal-footer">
@@ -64,7 +63,7 @@
 
 <!--    Modal Success-->
 <div class="modal fade" tabindex="-1" role="dialog" id="modalSuccess">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
         <div class="modal-content">
             <div class="modal-body text-center"></div>
             <div class="modal-footer">
