--- a/project/src/main/resources/templates/timetable/manageTimetable.html
+++ b/project/src/main/resources/templates/timetable/manageTimetable.html
@@ -54,7 +54,7 @@
 
 <!-- Override Modal HTML -->
 <div id="overrideTimetableModal" class="modal fade">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
             <form>
                 <div class="modal-body text-center"></div>
@@ -66,7 +66,7 @@
 
 <!--    Modal Override Success-->
 <div class="modal fade" tabindex="-1" role="dialog" id="overrideSuccess">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
         <div class="modal-content">
             <div class="modal-body text-center"></div>
             <div class="modal-footer"></div>
