--- a/project/src/main/resources/templates/manageAccount/login.html
+++ b/project/src/main/resources/templates/manageAccount/login.html
@@ -52,7 +52,7 @@
 
 <!--    Modal Login Success-->
 <div class="modal fade" tabindex="-1" role="dialog" id="loginSuccess">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
         <div class="modal-content">
             <div class="modal-body text-center">
                 <img class="mb-3 mt-3" th:src="@{img/img-success.png}"/>
