--- a/project/src/main/resources/templates/manageClass/deleteGifftedClass.html
+++ b/project/src/main/resources/templates/manageClass/deleteGifftedClass.html
@@ -46,7 +46,7 @@
 </div>
 <!-- Delete Modal HTML -->
 <div id="deleteGifftedClassModal" class="modal">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-body text-center">
                 <img class="mb-3 mt-3" src="https://img.icons8.com/flat_round/100/000000/error--v1.png"/>
@@ -64,7 +64,7 @@
 
 <!--    Modal Delete Success-->
 <div class="modal fade" tabindex="-1" role="dialog" id="deleteSuccess">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
         <div class="modal-content">
             <div class="modal-body text-center">
             </div>
