--- a/project/src/main/resources/templates/managePost/managePost.html
+++ b/project/src/main/resources/templates/managePost/managePost.html
@@ -7,6 +7,7 @@
 
     <!-- jQuery library -->
     <script th:src="@{/js/public/jquery-3.5.1.min.js}"></script>
+    <script th:src="@{/js/public/jquery.lazyload.min.js}"></script>
 
     <!--Bootstrap 4-->
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
@@ -33,10 +34,10 @@
                     <div class="form-group text-left mb-1">
                         <label>Trạng thái:</label>
                         <select class="combobox form-control w-75" id="status">
-                            <option value="" selected>Tất cả</option>
+                            <option value="">Tất cả</option>
                             <option value="0">Đã đăng</option>
                             <option value="1">Đã ẩn</option>
-                            <option value="2">Chờ duyệt</option>
+                            <option value="2" selected>Chờ duyệt</option>
                         </select>
                     </div>
                 </div>
