--- a/project/src/main/resources/templates/manageSchoolRank/rankByYear.html
+++ b/project/src/main/resources/templates/manageSchoolRank/rankByYear.html
@@ -51,14 +51,13 @@
         </div>
         <div class="table-title-2">
             <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 px-0">
+                <input type="button" id="download" class="btn btn-success mr-2" value="Tải xuống"/>
                 <input type="button" id="viewHistory" class="btn btn-success mr-2" value="Xem lịch sử"/>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 px-0 text-right" id="searchGroupButton">
-                <input type="button" id="editRankBtn" class="btn btn-success ml-2 manageBtn"
-                       value="Sửa xếp hạng năm"/>
+                <input type="button" id="editRankBtn" class="btn btn-success ml-2 manageBtn" value="Sửa xếp hạng năm"/>
                 <input type="button" id="createRankBtn" class="btn btn-success ml-2 manageBtn"
                        value="Tạo xếp hạng năm"/>
-                <input type="button" id="download" class="btn btn-success ml-2" value="Tải xuống"/>
             </div>
         </div>
 
@@ -80,7 +79,7 @@
 
 <!-- Create New Rank Modal HTML -->
 <div id="createNewRank" class="modal fade">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">Tạo xếp hạng năm học</h4>
@@ -104,7 +103,7 @@
 
 <!-- Edit Rank Modal HTML -->
 <div id="editRank" class="modal fade">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">Sửa xếp hạng năm học</h4>
@@ -119,8 +118,7 @@
                 <div class="error editRank-err"></div>
             </div>
             <div class="modal-footer">
-                <input type="submit" class="btn btn-danger" data-toggle="modal" id="editRankBtnModal"
-                       data-dismiss="modal" value="CHỈNH SỬA">
+                <input type="submit" class="btn btn-danger" data-toggle="modal" id="editRankBtnModal" value="CHỈNH SỬA">
                 <input type="button" class="btn btn-primary" data-dismiss="modal" value="ĐÓNG">
             </div>
         </div>
@@ -129,7 +127,7 @@
 
 <!--    Modal Message-->
 <div class="modal fade" tabindex="-1" role="dialog" id="messageModal">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
         <div class="modal-content">
             <div class="modal-body text-center"></div>
             <div class="modal-footer">
@@ -141,7 +139,7 @@
 
 <!-- History Modal HTML -->
 <div id="historyModal" class="modal fade">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title">Lịch sử chỉnh sửa</h4>
