--- a/project/src/main/resources/templates/manageTeacher/teacherInformation.html
+++ b/project/src/main/resources/templates/manageTeacher/teacherInformation.html
@@ -53,7 +53,7 @@
 
 <!--    Modal Edit Information Success-->
 <div class="modal fade" tabindex="-1" role="dialog" id="editInfoSuccess">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
         <div class="modal-content">
             <div class="modal-body text-center"></div>
             <div class="modal-footer">
