--- a/project/src/main/resources/templates/manageViolation/editViolationType.html
+++ b/project/src/main/resources/templates/manageViolation/editViolationType.html
@@ -47,7 +47,7 @@
 
 <!--    Modal Edit Information Success-->
 <div class="modal" tabindex="-1" role="dialog" id="editInfoSuccess">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
         <div class="modal-content">
             <div class="modal-body text-center">
                 <img class="mb-3 mt-3" src="https://img.icons8.com/material/100/007bff/ok--v1.png"/>
