--- a/project/src/main/resources/templates/manageViolationEnteringTime/manageViolationEnteringTime.html
+++ b/project/src/main/resources/templates/manageViolationEnteringTime/manageViolationEnteringTime.html
@@ -60,7 +60,7 @@
 
 <!-- Delete Modal HTML -->
 <div id="deleteModal" class="modal fade">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
             <div class="modal-body text-center">
             </div>
