--- a/project/src/main/resources/templates/schoolYear/editSchoolYear.html
+++ b/project/src/main/resources/templates/schoolYear/editSchoolYear.html
@@ -56,7 +56,7 @@
 
 <!--    Modal Edit Information Success-->
 <div class="modal fade" tabindex="-1" role="dialog" id="editInfoSuccess">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
         <div class="modal-content">
             <div class="modal-body text-center">
                 <img class="mb-3 mt-3" src="img/img-success.png"/>
