--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -1194,6 +1194,10 @@ fieldset .note {
     margin-bottom: 10px;
 }
 
+.violation-by-date .violation-description:first-child {
+    margin-top: 0 !important;
+}
+
 .violation-description {
     padding: 20px;
     border: 1px solid #ddd;
@@ -1592,6 +1596,20 @@ a.slide_btn {
     #msform fieldset {
         padding: 20px 0px;
     }
+
+    .violation-by-date .violation-date,
+    .violation-by-date .violation-details,
+    .violation-by-date .violation-substract-grade,
+    .violation-by-date .violation-quantity,
+    .violation-by-date .violation-total {
+        width: 100%;
+    }
+
+    .violation-by-date .violation-action {
+        position: static;
+        margin-top: 15px;
+        text-align: right;
+    }
 }
 
 @media screen and (max-width: 600px) {
@@ -1601,6 +1619,10 @@ a.slide_btn {
 }
 
 @media screen and (max-width: 768px) {
+    .container {
+        max-width: 100%;
+    }
+
     .div-space {
         display: none !important;
     }
@@ -1725,6 +1747,7 @@ a.slide_btn {
     .card-120 img {
         height: 200px !important;
     }
+
     .contact-number {
         padding: 2px 0;
     }
@@ -1741,6 +1764,10 @@ a.slide_btn {
         text-align: left;
     }
 
+    .nav-item {
+        border-top: 1px solid #ffffff4f;
+    }
+
     .mega-menu {
         display: none;
         padding: 0;
@@ -1752,11 +1779,11 @@ a.slide_btn {
         position: static;
     }
 
-    .rankWeekBtn {
+    .rankWeekBtn, .btnResponsive {
         text-align: right;
     }
 
-    .rankWeekBtn div:first-child input {
+    .rankWeekBtn div:first-child input, .btnResponsive div:first-child button {
         margin-right: 0 !important;
     }
 
