Fix bug 09/08/2020 1. Fix bug #0000006: Message lỗi bị lặp lại 2. Fix bug #0000007: Lỗi tải xuống trong phân công trực tuần 3. Fix bug #0000008: Lỗi trong màn danh sách lỗi theo ngày 4. Fix bug #0000009: Lỗi xóa phân công trong phân công trực tuần 5. Responsive trang Xem phân công trực tuần + Xem danh sách vi phạm theo ngày 6.  Fix bug #0000011: Không có data luôn khi load trang xếp hạng theo tuần 7. Update template menu

--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -254,10 +254,8 @@ a:hover {
 .mega-title {
     color: #eee;
     margin-top: 0px;
-    padding-left: 15px;
-    padding-bottom: 13px;
+    padding: 10px 20px;
     text-transform: uppercase;
-    padding-top: 15px;
     background-color: #7a96ca;
     font-weight: 500;
     font-size: 1rem;
@@ -1441,7 +1439,6 @@ a.slide_btn {
 }
 
 .card-block .card-text {
-    font-family: Open Sans;
     font-style: normal;
     font-size: 14px;
     color: #212121;
@@ -1592,6 +1589,22 @@ a.slide_btn {
 }
 
 /*Responsive*/
+@media screen and (max-width: 330px) {
+    .contact-number a {
+        font-weight: 300;
+        margin: 0 5px;
+        font-size: 13px;
+    }
+
+    .contact-number .icon {
+        display: none;
+    }
+    .content-wrap{
+        padding-right: 0;
+        padding-left: 0;
+    }
+}
+
 @media screen and (max-width: 576px) {
     #msform fieldset {
         padding: 20px 0px;
@@ -1609,6 +1622,12 @@ a.slide_btn {
         position: static;
         margin-top: 15px;
         text-align: right;
+    }
+
+    .contact-number {
+        float: right;
+        flex: 0 1 auto;
+        height: 24px;
     }
 }
 
@@ -1794,6 +1813,7 @@ a.slide_btn {
         z-index: 1500;
         left: 0;
         right: 0;
+        border: 1px solid #ffffff4f;
     }
 
     .mega-menu {
@@ -1802,6 +1822,19 @@ a.slide_btn {
 
     .mega-title {
         background-color: #1a3265;
+        margin-bottom: 0;
+        border-top: 1px solid #ffffff4f;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .stander {
+        display: none;
+    }
+
+    .stander li {
+        border-top: 1px solid #ffffff4f;
     }
 
     .dropdown:hover .dropdown-menu {
@@ -1809,7 +1842,7 @@ a.slide_btn {
         visibility: hidden;
     }
 
-    .dropdown.show .dropdown-menu {
+    .dropdown .dropdown-menu.show {
         opacity: 1;
         visibility: visible;
     }
@@ -1818,10 +1851,10 @@ a.slide_btn {
         display: none;
     }
 
-    /*.myHeader {*/
-    /*    position: fixed;*/
-    /*    top: 0;*/
-    /*    width: 100%;*/
-    /*    z-index: 1000;*/
-    /*}*/
+    .myHeader {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 1000;
+    }
 }
