Fix bug 10/08/2020 1. Chỉnh lại template timetable 2. Chỉnh lại mũi tên trang Danh sách lỗi vi phạm. 3. Chỉnh lại button chỉnh số lượng 4. Fix bug #0000026: Thiếu validate mật khẩu 5. Fix bug #0000028: Thiếu message báo lỗi ở trang xem yêu cầu thay đổi 6. Chỉnh lại footer khi bị tràn trang bằng cách thêm scroll cho các bảng

--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -1591,7 +1591,7 @@ a.slide_btn {
 }
 
 /*input-group-addon*/
-.input-group-addon{
+.input-group-addon {
     display: flex;
     align-items: center;
     border: 1px solid #ccc;
@@ -1603,6 +1603,9 @@ a.slide_btn {
     line-height: 1;
     color: #555;
     background-color: #eee;
+}
+.scrollable-table {
+    overflow-x: auto;
 }
 /*Responsive*/
 @media screen and (max-width: 330px) {
