Fix bug 11/08/2020 1. Tạo thời gian chấm thành công khong hiện dialog thông báo 2. Chỉnh lại dialog trang nội quy 3. Chỉnh lại responsive scroll table 4. Fix bug #0000029: gửi sai request api down load phân công sao đỏ 5. Fix bug #0000031: Thiếu message báo lỗi khi mật khẩu không dùng định dạng 6. Fix bug #0000032: Message báo lỗi vẫn hiện sau khi đóng 7. Fix bug #0000033: Hiển thị message chưa đúng ở các màn xếp hạng

--- a/project/src/main/resources/templates/manageViolation/editViolationType.html
+++ b/project/src/main/resources/templates/manageViolation/editViolationType.html
@@ -47,13 +47,10 @@
 </div>
 
 <!--    Modal Edit Information Success-->
-<div class="modal" tabindex="-1" role="dialog" id="editInfoSuccess">
+<div class="modal fade" tabindex="-1" role="dialog" id="editInfoSuccess">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
         <div class="modal-content">
-            <div class="modal-body text-center">
-                <img class="mb-3 mt-3" src="https://img.icons8.com/material/100/007bff/ok--v1.png"/>
-                <h5>Thông tin sửa thành công!</h5>
-            </div>
+            <div class="modal-body text-center"></div>
             <div class="modal-footer">
                 <a type="button" class="btn btn-primary" th:href="@{violationList}">ĐÓNG</a>
             </div>
