--- a/project/src/main/resources/templates/manageViolation/addViolation.html
+++ b/project/src/main/resources/templates/manageViolation/addViolation.html
@@ -54,7 +54,7 @@
 
 <!--    Modal Create Success-->
 <div class="modal fade" tabindex="-1" role="dialog" id="createSuccess">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
         <div class="modal-content">
             <div class="modal-body text-center"></div>
             <div class="modal-footer">
