--- a/project/src/main/resources/templates/manageViolation/violationList.html
+++ b/project/src/main/resources/templates/manageViolation/violationList.html
@@ -49,10 +49,7 @@
 <div id="deleteModal" class="modal fade">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
         <div class="modal-content">
-            <div class="modal-body text-center">
-                <img class="mb-3 mt-3" src="https://img.icons8.com/flat_round/100/000000/error--v1.png"/>
-                <h5 id="message-confirm"></h5>
-            </div>
+            <div class="modal-body text-center"></div>
             <div class="modal-footer">
                 <input type="submit" class="btn btn-danger" data-toggle="modal" data-target="#deleteSuccess"
                        id="deleteViolation" value="CÓ" data-dismiss="modal">
@@ -66,10 +63,7 @@
 <div class="modal fade" tabindex="-1" role="dialog" id="deleteSuccess">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
         <div class="modal-content">
-            <div class="modal-body text-center">
-                <img class="mb-3 mt-3" src="https://img.icons8.com/material/100/007bff/ok--v1.png"/>
-                <h5 id="message-delete"></h5>
-            </div>
+            <div class="modal-body text-center"></div>
             <div class="modal-footer">
                 <a type="button" class="btn btn-primary" th:href="@{violationList}">ĐÓNG</a>
             </div>
