--- a/project/src/main/resources/templates/manageSchoolRank/rankByYear.html
+++ b/project/src/main/resources/templates/manageSchoolRank/rankByYear.html
@@ -52,11 +52,11 @@
         </div>
         <div class="table-title-2 search rankWeekBtn row p-0" id="searchGroupButton">
             <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 flex-wrap px-0">
-                <input type="button" id="download" class="btn btn-success mr-2 my-1" value="Tải xuống"/>
-                <input type="button" id="viewHistory" class="btn btn-success mr-2 my-1" value="Xem lịch sử"/>
+                <input type="button" id="download" class="btn btn-success hide mr-2 my-1" value="Tải xuống"/>
+                <input type="button" id="viewHistory" class="btn btn-success hide mr-2 my-1" value="Xem lịch sử"/>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 flex-wrap px-0 text-right">
-                <input type="button" id="editRankBtn" class="btn btn-success manageBtn ml-2 my-1"
+                <input type="button" id="editRankBtn" class="btn btn-success manageBtn hide ml-2 my-1"
                        value="Sửa xếp hạng năm"/>
                 <input type="button" id="createRankBtn" class="btn btn-success manageBtn ml-2 my-1"
                        value="Tạo xếp hạng năm"/>
