--- a/project/src/main/resources/templates/manageViolationEnteringTime/manageViolationEnteringTime.html
+++ b/project/src/main/resources/templates/manageViolationEnteringTime/manageViolationEnteringTime.html
@@ -28,7 +28,7 @@
         </div>
         <div class="table-title-2 manageBtn">
             <div class="row mx-0 justify-content-end">
-                <a href="#deleteModal" class="btn btn-success my-1 mr-0" data-toggle="modal" onclick="checkSelect()">
+                <a href="#deleteModal" class="btn btn-success hide my-1 mr-0" id="deleteBtn" data-toggle="modal" onclick="checkSelect()">
                     <span>Xóa</span>
                 </a>
                 <a th:href="@{createViolationEnteringTime}" class="btn btn-success my-1 mr-0">
