--- a/project/src/main/resources/templates/manageEmulation/assignEmulation.html
+++ b/project/src/main/resources/templates/manageEmulation/assignEmulation.html
@@ -56,12 +56,12 @@
         </div>
         <div class="table-title-2 btnResponsive row p-0 m-0 mb-4">
             <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 flex-wrap px-0">
-                <button class="btn btn-success mr-2 my-1" id="download">Tải xuống</button>
+                <button class="btn btn-success hide mr-2 my-1" id="download">Tải xuống</button>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 flex-wrap px-0 text-right">
                 <a href="#addAssign" class="btn btn-success manageBtn ml-2 mr-0 my-1" data-toggle="modal">Tạo phân
                     công</a>
-                <button class="btn btn-success ml-2 my-1 manageBtn" onclick="deleteAssign()">Xóa phân công</button>
+                <button class="btn btn-success hide ml-2 my-1 manageBtn" id="deleteBtn" onclick="deleteAssign()">Xóa phân công</button>
                 <button class="btn btn-search ml-2 mr-0 my-1" id="search">Tìm kiếm</button>
             </div>
         </div>
