Fix bug 12/08/2020: 1. Thêm phân trang cho trang Xem lịch sử vi phạm 2. Fix bug # 0000041: sai tên lable

--- a/project/src/main/resources/templates/manageEmulation/assignEmulation.html
+++ b/project/src/main/resources/templates/manageEmulation/assignEmulation.html
@@ -36,7 +36,7 @@
             <div class="search row align-items-baseline">
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 px-0">
                     <div class="form-group text-left mb-1">
-                        <label>Ngày:</label>
+                        <label>Áp dụng từ ngày:</label>
                         <select class="combobox form-control w-75" id="fromDate"></select>
                     </div>
                 </div>
@@ -92,7 +92,7 @@
             <div class="modal-body">
                 <div class="form-group">
                     <div class="form-group-input">
-                        <label>Áp dụng từ ngày</label>
+                        <label>Áp dụng từ ngày:</label>
                         <input type="date" class="form-control" id="dateApplied"/>
                     </div>
                 </div>
