--- a/project/src/main/resources/templates/manageEmulation/history.html
+++ b/project/src/main/resources/templates/manageEmulation/history.html
@@ -28,7 +28,7 @@
 <div class="container">
     <div class="table-wrapper">
         <div class="table-title">
-            <h2>Lịch sử</h2>
+            <h2>LỊCH SỬ VI PHẠM</h2>
             <div class="search">
                 <div class="row justify-content-md-start">
                     <div class="form-group col-xl-3 col-sm-12 text-left">
@@ -63,6 +63,7 @@
         </div>
         <div class="violation-by-date mt-5" id="violationList">
         </div>
+        <div class="table-paging hide"></div>
     </div>
 </div>
 
