kimpt142 commit fix add newsletterid in detail post function 13/08

--- a/project/src/main/resources/templates/managePost/postDetail.html
+++ b/project/src/main/resources/templates/managePost/postDetail.html
@@ -38,7 +38,7 @@
             <div class="post-content-text">
             </div>
             <div class="post-action text-right">
-                <div class="newsletterId" hidden></div>
+                <span id="newsletterId" th:text="${newsletterId}" class="hide"></span>
                 <div class="status" hidden></div>
                 <div class="author" hidden></div>
                 <input type="button" class="btn btn-outline-danger btn-delete" value="ẨN BÀI">
