--- a/project/src/main/resources/templates/manageAccount/forgotPassword.html
+++ b/project/src/main/resources/templates/manageAccount/forgotPassword.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>.::Quên mật khẩu::.</title>
     <link th:href="@{/img/logo.png}" rel="shortcut icon" type="image/x-icon"/>
-    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
+    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
 
     <!-- jQuery library -->
     <script th:src="@{/js/public/jquery-3.5.1.min.js}"></script>
@@ -31,7 +31,12 @@
                 <h2 class="fs-title">Quên mật khẩu</h2>
                 <fieldset>
                     <p>Trong trường hợp này bạn cần liên hệ với Hotline để đặt lại mật khẩu.</p>
-                    <h5 class="form-title">Hotline: 02183 855 550</h5>
+                    <table class="table table-borderless">
+                        <tr>
+                            <td><h5 class="form-title">Hotline:</h5></td>
+                            <td class="admin-info"></td>
+                        </tr>
+                    </table>
                 </fieldset>
             </form>
         </div>
@@ -41,4 +46,5 @@
 <div th:replace="fragments/footer :: footer"></div>
 <div class="modal-loading"></div>
 </body>
+<script type="text/javascript" th:src="@{/js/manageAccount/forgotPassword.js}"></script>
 </html>
