1. Update image cover in homepage 2. Update fanpage in footer

--- a/project/src/main/resources/templates/fragments/footer.html
+++ b/project/src/main/resources/templates/fragments/footer.html
@@ -50,9 +50,9 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-12 text-center">
-                    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2F1001SuThatDHFPT%2F&tabs&width=300px&height=154&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-                            width="300px" height="154" style="border:none;overflow:hidden" scrolling="no"
-                            frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+                    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fhoangvanthuhighschool&tabs&width=300&height=136&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+                            width="300" height="136" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+                            allowTransparency="true" allow="encrypted-media"></iframe>
                 </div>
             </div>
         </div>
