--- a/project/src/main/resources/templates/manageAccount/forgotPassword.html
+++ b/project/src/main/resources/templates/manageAccount/forgotPassword.html
@@ -30,13 +30,8 @@
                 <img src="img/img-forgotPassword.png"/>
                 <h2 class="fs-title">Quên mật khẩu</h2>
                 <fieldset>
-                    <p>Trong trường hợp này bạn cần liên hệ với Hotline để đặt lại mật khẩu.</p>
-                    <table class="table table-borderless">
-                        <tr>
-                            <td><h5 class="form-title">Hotline:</h5></td>
-                            <td class="admin-info"></td>
-                        </tr>
-                    </table>
+                    <p>Liên hệ với admin để lấy lại mật khẩu.</p>
+                    <table class="table table-borderless"></table>
                 </fieldset>
             </form>
         </div>
