Chỉnh lại giao diện trang forgotPassword

--- a/project/src/main/resources/templates/manageAccount/forgotPassword.html
+++ b/project/src/main/resources/templates/manageAccount/forgotPassword.html
@@ -30,8 +30,8 @@
                 <img src="img/img-forgotPassword.png"/>
                 <h2 class="fs-title">Quên mật khẩu</h2>
                 <fieldset>
-                    <p>Liên hệ với admin để lấy lại mật khẩu.</p>
-                    <table class="table table-borderless"></table>
+                    <p>Liên hệ với ADMIN để lấy lại mật khẩu.</p>
+                    <h5 class="user-info text-center"></h5>
                 </fieldset>
             </form>
         </div>
