Fix bug 16/09/2020: 1. Validate ngày trang Thống kê vi phạm 2. Chỉnh lại url menu Thống kê vi phạm

--- a/project/src/main/resources/templates/manageEmulation/violationListOfDay.html
+++ b/project/src/main/resources/templates/manageEmulation/violationListOfDay.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>.::Lịch sử vi phạm::.</title>
+    <title>.::Thống kê vi phạm::.</title>
     <link th:href="@{/img/logo.png}" rel="shortcut icon" type="image/x-icon"/>
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
 
@@ -28,7 +28,7 @@
 <div class="container">
     <div class="table-wrapper">
         <div class="table-title">
-            <h2>LỊCH SỬ VI PHẠM</h2>
+            <h2>THỐNG KÊ VI PHẠM</h2>
             <div class="search row align-items-end">
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 px-0">
                     <div class="form-group text-left mb-1">
