Fix 24/09/2020: - Thêm tổng sĩ số, số đoàn viên cho trang quản lý lớp, chỉnh thông tin lớp, tạo lớp, chấm điểm thi đua

--- a/project/src/main/resources/templates/manageClass/manageClass.html
+++ b/project/src/main/resources/templates/manageClass/manageClass.html
@@ -101,6 +101,8 @@
                     <th>Khối</th>
                     <th>Hệ chuyên</th>
                     <th>Tên định danh</th>
+                    <th>Tổng sĩ số</th>
+                    <th>Số đoàn viên</th>
                     <th>Trạng thái</th>
                     <th></th>
                 </tr>
