--- a/project/src/main/resources/templates/manageEmulation/gradingToEmulation.html
+++ b/project/src/main/resources/templates/manageEmulation/gradingToEmulation.html
@@ -43,10 +43,9 @@
                         <input type="date" class="form-control w-75" id="datetime">
                     </div>
                 </div>
-
             </div>
-            <div class="table-title-2s">
-                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 px-0">
+            <div class="table-title-2">
+                <div class="col-md-12 px-0">
                     <div class="form-group mb-1">
                         <label id="numOfStudent"><span class="font-500">Tổng sĩ số: </span>Chưa cập nhật</label><br>
                         <label id="numOfUnion"><span class="font-500">Số đoàn viên: </span>Chưa cập nhật</label>
