--- a/project/src/main/resources/templates/manageEmulation/showViolationList.html
+++ b/project/src/main/resources/templates/manageEmulation/showViolationList.html
@@ -67,13 +67,13 @@
             <table class="table table-bordered table-edit mt-3 w-100">
                 <thead class="thead-light">
                 <tr class="align-items-center">
-                    <th>STT</th>
                     <th>Ngày</th>
                     <th>Thứ</th>
                     <th>Loại vi phạm</th>
                     <th>Lớp</th>
                     <th>Mô tả lỗi</th>
                     <th>Người chấm</th>
+                    <th>Điểm trừ</th>
                 </tr>
                 </thead>
                 <tbody></tbody>
