--- a/project/src/main/resources/templates/managePost/editPost.html
+++ b/project/src/main/resources/templates/managePost/editPost.html
@@ -37,10 +37,8 @@
             <form method="POST" role="form" enctype="multipart/form-data" id="form-post">
                 <div class="form-group">
                     <label for="imageCover">Ảnh bìa bài viết <span class="text-red">*</span></label>
-                    <textarea id="imageCover" name="imageCover" cols="80" rows="1"></textarea>
-<!--                    <input type="file" th:name="file" class="form-control-file" id="imageCover" accept="image/*"-->
-<!--                           onchange="loadFile(event)"/>-->
-<!--                    <img id="imagePreview"/>-->
+                    <input type="file" th:name="file" class="form-control-file" id="imageCover" accept="image/*" onchange="loadFile(event)"/>
+                    <img id="imagePreview"/>
                 </div>
             </form>
             <div class="form-check text-left mb-4 p-0">
